# ac-g2-review-chatbot

./: .env.example  .gitignore  README.md  auth.ts  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/: actions.ts  globals.css  layout.tsx
app/api/auth/callback/: route.ts
app/api/chat/: route.ts
app/sign-in/: page.tsx
app/sign-up/: page.tsx
components/: chat-panel.tsx  clear-history.tsx  empty-screen.tsx  footer.tsx  header.tsx  login-button.tsx  login-form.tsx  user-menu.tsx
components/ui/: dialog.tsx  icons.tsx  sheet.tsx
scripts/generate_embeddings/: pyproject.toml
scripts/generate_embeddings/generate_embeddings/: main.py
supabase/: config.toml
supabase/migrations/: 20240611172531_reviews.sql
